coco-rs/app/tui/src/presentation/snapshots/coco_tui__presentation__permissions_editor__tests__perms_add_destination.snap
---
source: app/tui/src/presentation/permissions_editor.test.rs
expression: body_only(&state)
---
[Allow]   Ask    Deny    Workspace 

Where should this be saved?

  ○ Project settings (local)
      .cocode/settings.local.json — gitignored, this machine only
▸ ◉ Project settings
      .cocode/settings.json — shared with your team
  ○ User settings
      ~/.cocode/settings.json — applies to all your projects


↑/↓ choose destination · Enter save · Esc back
