coco-rs/app/tui/src/presentation/snapshots/coco_tui__presentation__permissions_editor__tests__perms_add_input.snap
---
source: app/tui/src/presentation/permissions_editor.test.rs
expression: body_only(&state)
---
 Recently denied   [Allow]   Ask    Deny    Workspace 

Enter a permission rule (e.g. Bash(git *) or Read):
  > Bash(npm *)▏

Format: Tool or Tool(specifier). Enter to continue, Esc to cancel.

Enter to continue · Esc to cancel
