coco-rs/app/tui/src/presentation/snapshots/coco_tui__presentation__permissions_editor__tests__perms_allow_list.snap
---
source: app/tui/src/presentation/permissions_editor.test.rs
expression: body_only(&state)
---
 Recently denied   [Allow]   Ask    Deny    Workspace 

Tools allowed without asking.

▸ + Add a new rule…
  Bash(git *)  ·  local
  Read  ·  managed  ·  read-only


←/→ switch tab · ↑/↓ select · Enter choose · Esc close
