coco-rs/app/tui/src/presentation/snapshots/coco_tui__presentation__permissions_editor__tests__perms_delete_confirm.snap
---
source: app/tui/src/presentation/permissions_editor.test.rs
expression: body_only(&state)
---
 Recently denied   [Allow]   Ask    Deny    Workspace 

Delete this rule?

  Bash(git *)

    Yes
  ▸ No


←/→ choose · Enter confirm · Esc cancel
