coco-rs/app/tui/src/presentation/snapshots/coco_tui__presentation__permissions_editor__tests__perms_managed_only.snap
---
source: app/tui/src/presentation/permissions_editor.test.rs
expression: body_only(&state)
---
 Recently denied   [Allow]   Ask    Deny    Workspace 

Managed by policy — rules are read-only.

Tools allowed without asking.

▸ + Add a new rule…
  Bash(git *)  ·  local
  Read  ·  managed  ·  read-only


←/→ switch tab · ↑/↓ select · Enter choose · Esc close
