coco-rs/app/tui/src/presentation/snapshots/coco_tui__presentation__permissions_editor__tests__perms_recent_denied_list.snap
---
source: app/tui/src/presentation/permissions_editor.test.rs
expression: body_only(&state)
---
[Recently denied]   Allow    Ask    Deny    Workspace 

Commands recently denied by the auto mode classifier.

▸ ✗ Bash
    destructive filesystem operation


↑/↓ select · Enter approve · r retry · Esc close
