coco-rs/app/tui/src/presentation/snapshots/coco_tui__presentation__permissions_editor__tests__perms_workspace_list.snap
---
source: app/tui/src/presentation/permissions_editor.test.rs
expression: body_only(&state)
---
 Recently denied    Allow    Ask    Deny   [Workspace]

Directories accessible in addition to the project root.

▸ + Add directory…
  /work  ·  cwd  ·  read-only
  /srv/data  ·  project


←/→ switch tab · ↑/↓ select · Enter choose · Esc close
